--- a/src/site/notes/11036.md
+++ b/src/site/notes/11036.md
@@ -86,7 +86,7 @@ BOOSTER：22
 假轴调整：尽量连续、减少特殊图标出现次数或不要太密集
 真轴调整，防止同时存在过多数量图标(少配1，尽量2-4连续)
 
-7/29 开放前检查
+7/29 上线前检查
 gm
 ![Pasted image 20250729142257.png](/img/user/Pasted%20image%2020250729142257.png)
 
