--- a/src/site/notes/整理.md
+++ b/src/site/notes/整理.md
@@ -3,7 +3,6 @@
 ---
 
 
-
 一、资料
 1、192.168.0.50-Share-Unicorn-CR-Cash Rally-Package下载apk
 使用模拟器游玩，注意选择服务器，重启生效
@@ -154,6 +153,8 @@ todo
 ![Pasted image 20250808140742.png](/img/user/Pasted%20image%2020250808140742.png)
 （根据simulation结果自动更新reel信息）
 2、调simulation.py，统一下样式，优化使用配置
+
+[pot-app/pot-desktop: 🌈一个跨平台的划词翻译和OCR软件 | A cross-platform software for text translation and recognition.](https://github.com/pot-app/pot-desktop)
 
 
 
