--- a/src/site/notes/整理.md
+++ b/src/site/notes/整理.md
@@ -15,15 +15,30 @@ http://192.168.201.203:8003/cc/
 Aih8UN3r85TkwNC==
 部分信息修改后需要玩家重新上线生效
 2、splunk
+正式服：
 [http://18.246.54.146:8000/zh-CN/app/search/search](http://18.246.54.146:8000/zh-CN/app/search/search)  
 ==zhangyipeng  
 密码已更新==
 
+常用“仪表盘”——“CR.用户行为追踪”
+
+测试服：
 https://39.106.61.177:8000/zh-CN/app/search/search
 ==zhangyipeng  
 密码已更新
 
-3、内部信息（找leader申请权限）
+3、elastic
+正式服：
+http://52.38.253.9:55601/login?next=%2Fapp%2Fdashboards#/view/30ee04f0-a49d-11ee-b0f3-199426ca35bf
+==zhangyipeng==
+==PeLPEeb4eFGpg4P==
+
+测试服：
+http://39.102.117.166:55601/app/dashboards#/view/00f6e9b0-42f0-11ee-acf6-8ba69c47b53d?_g= (filters:!(),refreshInterval:(pause:!t,value:60000),time:(from:now-15m,to:now))
+==cr_search_user==
+==4ZvE9AxhDWvAgjL==
+
+4、内部信息（找leader申请权限）
 https://drive.google.com/drive/folders/1We6zP6FRq_AcDci5pyIDfK7OHGAKlwIF?ths=true
 https://docs.google.com/spreadsheets/d/1wy6rRse5zfc2xAMBVsLIyN0-Drkzsznj4wEY5AhrH6A/edit?gid=445249522#gid=445249522
 https://docs.google.com/spreadsheets/d/1PTmMT_dxxrCX7EQb0jC6krJNzvMQNuHQ4u3H_eFpsy0/edit?gid=0#gid=0
@@ -111,7 +126,7 @@ git push
 ```
 xshell 进入1269，重启检查有无报错
 
-
+体验预售：修改vboost时间戳字段
 
 易踩坑汇总：
 1、积攒相关的内容一般有三种做法：
@@ -138,6 +153,18 @@ xshell 进入1269，重启检查有无报错
 
 8、1269服不能切个人分支，都在master更新
 
+9、igt包能显示的作弊数量有限（最大约20），优先展示各feature玩法即可，可和策划商量选择部分作弊展示
+
+10、simulation中大致相同的计算过程使用同种名称标注（如freq一般默认为i/special_times）
+
+11、玩家最大bet计算公式为：max(min(余额/30, $5000), 余额/80)
+即当玩家超过40w刀余额时才会有超过5000刀的bet，暂时没有发现bet过大导致赢钱超上限情况
+
+12、theme_info中的r_idx为该玩家在当前主题下spin的总次数
+![Pasted image 20251104181950.png](/img/user/Pasted%20image%2020251104181950.png)
+
+13、金币转美刀计算
+在splunk--用户行为追踪中查看该玩家storemul（膨胀系数），表示一美刀转换一百万金币的倍数
 
 
 ideas
@@ -156,5 +183,22 @@ todo
 
 [pot-app/pot-desktop: 🌈一个跨平台的划词翻译和OCR软件 | A cross-platform software for text translation and recognition.](https://github.com/pot-app/pot-desktop)
 
+
+300（200-500）、2000（1500-3000）、6500（5000-8000）、15000+
+
+11036（已完成）、11045成就目前在zyp_11045分支
+
+11042最新版及成就在zyp_11045分支
+
+11043在zyp_11045更
+
+12028成就
+
+11003成就在zyp_11003
+
+![Pasted image 20251103150118.png](/img/user/Pasted%20image%2020251103150118.png)
+
+
+11045 调各feature freq
 
 
