--- a/src/site/notes/1204.md
+++ b/src/site/notes/1204.md
@@ -2,7 +2,7 @@
 {"dg-publish":true,"permalink":"/1204/"}
 ---
 
-
+==**激励动画**==
 确定触发sc数目
 1sc：停前激励1/落1sc收集
 2sc：停前激励2/停前激励1+落1sc收集/落2sc收集/落1sc收集+停后激励1
@@ -17,21 +17,40 @@
 
 ![Pasted image 20251128153635.png](/img/user/Pasted%20image%2020251128153635.png)
 
+==**代码修改方向**==
+![Pasted image 20251205101227.png](/img/user/Pasted%20image%2020251205101227.png)
+![1764217824896_d77d5f8b44f745468fa958528ac6d0b2.png](/img/user/1764217824896_d77d5f8b44f745468fa958528ac6d0b2.png)
+初始递归方案：
+对每种图案大小分别查找每个位置，判断是否能合并
+修改后的贪心方案：
+首先判别所有可能合并的位置，按优先级依次采用，判断冲突并更新
+进一步优化：
+当遇到同等面积的图标，应考虑不同选择后剩余的盘面可构成的最优情况来判断
+
+==**通用逻辑中线赢钱计算方法**==
 ![e0a3d714843353a839ab5af9cd414218.png](/img/user/e0a3d714843353a839ab5af9cd414218.png)
 ![Pasted image 20251128151848.png](/img/user/Pasted%20image%2020251128151848.png)
 
 
-
-math_configs/utils.py配轴
+==**math_configs/utils.py配轴**==
 print_pay_table()貌似没有起作用
-传一版简化代码+考虑赢钱线的配轴方法
+**简化版本**
+![Pasted image 20251205095354.png](/img/user/Pasted%20image%2020251205095354.png)
+
+**优化repeat_dict配置生成更优版本**
+![Pasted image 20251205095745.png](/img/user/Pasted%20image%2020251205095745.png)
+![Pasted image 20251205095805.png](/img/user/Pasted%20image%2020251205095805.png)
+![Pasted image 20251205100036.png](/img/user/Pasted%20image%2020251205100036.png)
+
+**respin假轴生成**
+![Pasted image 20251205094645.png](/img/user/Pasted%20image%2020251205094645.png)
+**普通轴插入特殊图标**
+![Pasted image 20251205094624.png](/img/user/Pasted%20image%2020251205094624.png)
+
+![Pasted image 20251205094700.png](/img/user/Pasted%20image%2020251205094700.png)
 
 
-
-
-
-
-round()四舍五入问题
+==**round()四舍五入问题**==
 
 Python2.7
 
