--- a/src/site/notes/1219.md
+++ b/src/site/notes/1219.md
@@ -15,3 +15,5 @@
 停轮前失败的人物动画与line win不同时出现
 
 ![Pasted image 20251219160626.png](/img/user/Pasted%20image%2020251219160626.png)
+
+![Pasted image 20251219161714.png](/img/user/Pasted%20image%2020251219161714.png)
